updates on subdivision worksheet

--- a/src/app/subdivision/worksheet/db-page/db-page.component.html
+++ b/src/app/subdivision/worksheet/db-page/db-page.component.html
@@ -2,7 +2,7 @@
     <label class="input-control checkbox">
          <input type="checkbox" >
          <span  class="check"></span>
-         <span  class="caption">9-1-1 NET (MSAG)</span>
+         <span  class="caption">9-1-1 NET (MSAG) - Enter</span>
          <input type="text" >
     </label>
     <label class="input-control checkbox">
@@ -20,12 +20,41 @@
        <br>
        <br>
        <br>
-       <div class="input-control text full-size">
-            <input type="text" placeholder="Date Sign Off" uppercase>
-           
-        </div>
-        <div class="input-control text full-size">
-                <input type="text" placeholder="Sign Off By" uppercase>
-               
-            </div>
+      
 </div>
+<div >
+    <label style="width: 431px;" class="input-control checkbox">
+         <input type="checkbox" >
+         <span  class="check"></span>
+         <span  class="caption">Plat Scan - Enter</span>
+         <input  type="text" >
+    </label>
+    <label class="input-control checkbox">
+            <input type="checkbox" >
+            <span  class="check"></span>
+            <span  class="caption">UPDATE</span>
+            <input type="text" >
+       </label>
+       <label class="input-control checkbox">
+            <input type="checkbox" >
+            <span  class="check"></span>
+            <span  class="caption">VERIFIED</span>
+            <input type="text" >
+       </label>
+       <br>
+       <br>
+       <br>
+      
+</div>
+
+
+<hr>
+
+<div class="input-control text full-size">
+    <input type="text" placeholder="Date Sign Off" uppercase>
+   
+</div>
+<div class="input-control text full-size">
+        <input type="text" placeholder="Sign Off By" uppercase>
+       
+    </div>
