--- a/src/app/subdivision/worksheet/lv-page/lv-page.component.html
+++ b/src/app/subdivision/worksheet/lv-page/lv-page.component.html
@@ -58,18 +58,7 @@
         </div>
         <hr>
          <h2 style="text-align: center;">Plat Received From</h2>
-         <div>
-            <label class="input-control checkbox">
-                <input type="checkbox" >
-                
-                <span class="check"></span>
-                <span class="caption">DBA</span>
-               
-            </label>
-         </div>
-         <div class="input-control text full-size">
-            <input type="text">
-        </div>
+         
          <br>
          <br>
          <div>
@@ -89,7 +78,7 @@
             <label class="input-control checkbox">
                 <input type="checkbox" >
                 <span  class="check"></span>
-                <span  class="caption">ONLINE</span>
+                <span  class="caption">ONLINE/CARSONS</span>
             </label>
          </div>
          <div class="input-control text full-size">
@@ -108,3 +97,16 @@
          <div class="input-control text full-size">
             <input type="text">
         </div>
+        <hr>
+        <div class="input-control text full-size">
+            <input type="text" placeholder="Address By" uppercase>
+           
+        </div>
+        <div class="input-control text full-size">
+            <input type="text" placeholder="Date Sign Off" uppercase>
+           
+        </div>
+        <div class="input-control text full-size">
+                <input type="text" placeholder="Sign Off By" uppercase>
+               
+            </div>
