--- a/src/app/subdivision/worksheet/main-page/main-page.component.html
+++ b/src/app/subdivision/worksheet/main-page/main-page.component.html
@@ -15,3 +15,11 @@
     <div class="input-control text full-size">
       <input type="text">
     </div>
+    <label >X</label>
+    <div class="input-control text full-size">
+      <input type="text">
+    </div>
+    <label >Y</label>
+    <div class="input-control text full-size">
+      <input type="text">
+    </div>
