--- a/src/app/subdivision/worksheet/gis-page/gis-page.component.html
+++ b/src/app/subdivision/worksheet/gis-page/gis-page.component.html
@@ -1,3 +1,95 @@
-<p>
-  gis-page works!
-</p>
+<div style="width:100%;height: 430px;padding: 20px;">
+    <div style="float: left; width: 23%; border: 1px solid #eee;padding: 16px; box-shadow: 0 2px 3px #ccc;  ">
+        <h3>MAP ITEMS VERIFIED</h3>
+   
+           <label  class="input-control checkbox">
+               <input type="checkbox" >
+               <span  class="check"></span>
+               <span  class="caption">MSAG VERIFIED</span>
+               
+             </label>  
+           <br>
+           <label  class="input-control checkbox">
+               <input type="checkbox" >
+               <span  class="check"></span>
+               <span  class="caption">STREET NAME VERIFIED</span>
+               
+           </label>
+         <br>
+         <label class="input-control checkbox">
+             <input type="checkbox" >
+             <span  class="check"></span>
+             <span  class="caption">STREET RANGE VERIFIED</span>
+             
+         </label>
+         <br>
+         <label class="input-control checkbox">
+           <input type="checkbox" >
+           <span  class="check"></span>
+           <span  class="caption">ESN VERIFIED</span>
+         
+       </label>
+       <br>
+       <label class="input-control checkbox">
+         <input type="checkbox" >
+         <span  class="check"></span>
+         <span  class="caption">911 COMMUNITY VERIFIED</span>
+       
+       </label>
+       <br>
+       <label class="input-control checkbox">
+         <input type="checkbox" >
+         <span  class="check"></span>
+         <span  class="caption">GEOCODING</span>
+       
+       </label>
+       <br>
+       <label class="input-control checkbox">
+         <input type="checkbox" >
+         <span  class="check"></span>
+         <span  class="caption">ERROR FOUND</span>
+         
+       </label>
+   
+    
+   </div>
+   <div style="float: left; width: 400px;height: 100px;">
+
+   </div>
+   <div style="float: left; width: 20%; border: 1px solid #eee;padding: 16px; box-shadow: 0 2px 3px #ccc;  ">
+     <h3>Mapping Verified</h3>
+      <div class="input-control text full-size">
+          <input type="text" placeholder="INITIALS" uppercase>
+         
+      </div>
+      <div class="input-control text full-size">
+              <input type="date" placeholder="MAPPING VERIFIED DATE" uppercase>
+             
+          </div>
+   </div>
+   <div style="float: left; width: 20%; border: 1px solid #eee;padding: 16px; box-shadow: 0 2px 3px #ccc;  ">
+     <h3>Geocoding</h3>
+      <div class="input-control text full-size">
+          <input type="text" placeholder="INITIALS" uppercase>
+         
+      </div>
+      <div class="input-control text full-size">
+              <input type="date" placeholder="GEOCODING DATE" uppercase>
+             
+          </div>
+   </div>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<div class="input-control text full-size">
+  <label >Date Sign Off</label>
+    <input type="date" placeholder="Date Sign Off" uppercase>
+   
+</div>
+<div class="input-control text full-size">
+        <input type="text" placeholder="Sign Off By" uppercase>
+       
+    </div>
