--- a/src/app/subdivision/worksheet/worksheet.component.html
+++ b/src/app/subdivision/worksheet/worksheet.component.html
@@ -6,6 +6,7 @@
         <li><a href="#gissheet">GIS VALIDATION PROCESS</a></li>
         <li><a href="#feed">COMMENTS FEED</a></li>
         <li><a href="#georef"> GEOREFERENCE</a></li>
+        <li><a href="#attach">ATTACHMENTS</a></li>
     </ul>
     <div class="frames">
         
@@ -23,13 +24,23 @@
         </div>
         
         <div class="frame ribbed-white" id="gissheet">
-          
+          <app-gis-page></app-gis-page>
         </div>
         <div class="frame ribbed-white" id="feed">
           
         </div>
-        <div class="frame ribbed-white" id="georef">
-            <app-leaflet-map></app-leaflet-map>
+        <div class="frame ribbed-white" id="georef" ondragover="return false;"(dragenter)="handleDragEnter()"
+        (dragleave)="handleDragLeave()"
+        (drop)="handleDrop($event)">
+            <app-leaflet-map [overlay]="overlay"></app-leaflet-map>
+            <div>
+               <canvas style="visibility: hidden;" #pdfCanvas id="the-canvas"></canvas>
+            </div>
         </div>
+
+        <div class="frame ribbed-white" id="attach">
+
+        </div>
+
     </div>
 </div>
