--- a/src/app/identify-list/identify-list.component.html
+++ b/src/app/identify-list/identify-list.component.html
@@ -4,8 +4,8 @@
 <div id="container" [ngStyle]="{'opacity': opacity}">
 
     <div class="window">
-        <div class="window-caption">
-            <div class="window-caption-title">Identify Results
+        <div class="window-caption" style="background: #303030; box-shadow: 0 2px 3px #ccc; border-bottom: 1px #303030 solid; border-top: 1px #0ce3ac solid;">
+            <div style="color:white;" class="window-caption-title">Identify Results
                   
                 <div class="pull-right">
                     <button (click)="onTransparency()" class="button cycle-button"><i class="fa fa-cog"></i></button>
