--- a/src/app/subdivision/worksheet/worksheet.component.html
+++ b/src/app/subdivision/worksheet/worksheet.component.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="frame ribbed-white" id="attach">
-
+            <app-attach-page></app-attach-page>
         </div>
 
     </div>
