--- a/src/app/subdivision/worksheet/attach-page/attach-page.component.html
+++ b/src/app/subdivision/worksheet/attach-page/attach-page.component.html
@@ -1,10 +1,14 @@
 <div class="grid condensed demo-grid">
   <div *ngFor="let pics of groupPics" style="margin-top:30px;" class="row cells3">
       <div *ngFor="let pic of pics" class="cell">
-        <div class="card">
+
+        <div style="cursor:pointer;" class="card">
             <div></div>
             <img [src]="pic.source"  style="width:100%;height: 300px;">
           <small>{{pic.name}}</small>
+          <br>
+          <button class="button info"><i class="fa fa-retweet"></i></button>
+          <button class="button danger"(click)="removeItem(pic.position)"><i class="fa fa-trash"></i></button>
         </div>
       </div>
   </div>
