--- a/src/app/subdivision/worksheet/worksheet.component.html
+++ b/src/app/subdivision/worksheet/worksheet.component.html
@@ -30,12 +30,12 @@
         <div class="frame ribbed-white" id="feed">
           
         </div>
-        <div class="frame ribbed-white" id="georef" ondragover="return false;"(dragenter)="handleDragEnter()"
+        <div style="padding: 0;" class="frame ribbed-white" id="georef" ondragover="return false;"(dragenter)="handleDragEnter()"
         (dragleave)="handleDragLeave()"
         (drop)="handleDrop($event)">
             <app-leaflet-map [overlay]="overlay" [remove]="remove"></app-leaflet-map>
             <div>
-               <canvas style="visibility: hidden;" #pdfCanvas id="the-canvas"></canvas>
+               <canvas style="display: none;" #pdfCanvas id="the-canvas"></canvas>
             </div>
         </div>
 
