--- a/src/app/subdivision/worksheet/attach-page/attach-page.component.css
+++ b/src/app/subdivision/worksheet/attach-page/attach-page.component.css
@@ -5,3 +5,7 @@
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2), 0 4px 20px 0 rgba(0,0,0,0.19);
 
 }
+
+.cardColor {
+    border: 1px solid blueviolet;
+}
