--- a/src/app/subdivision/worksheet/attach-page/attach-page.component.html
+++ b/src/app/subdivision/worksheet/attach-page/attach-page.component.html
@@ -8,7 +8,7 @@
             <img (click)="onPreview(pic)" [src]="pic.source"  style="width:100%;height: 300px;">
           <small>{{pic.name}}</small>
           <br>
-          <button class="button info"><i class="fa fa-retweet"></i></button>
+          <button class="button info" (click)="onRotate(pic)"><i class="fa fa-retweet"></i></button>
           <button class="button info" (click)="changeGeo(pic)"><i class="fa fa-globe"></i></button>
           <button class="button danger"(click)="removeItem(pic.position)"><i class="fa fa-trash"></i></button>
         </div>
