more udpates dones.

--- a/src/app/subdivision/worksheet/preview/preview.component.html
+++ b/src/app/subdivision/worksheet/preview/preview.component.html
@@ -1,3 +1,6 @@
 <div id="preview" >
+  <div style="position: absolute;color: #0ce3ac; right:10px; top: 4px;font-size:50px; z-index: 20;">
+      <i (click)="onClose()" class="fa fa-times-circle" aria-hidden="true"></i>
+  </div>
   <img [src]="source" class="img-thumbnail">
 </div>
