WORKING SETTING UPDATES FEATURES

--- a/src/app/dashboard-tickets/dashboard-tickets.component.html
+++ b/src/app/dashboard-tickets/dashboard-tickets.component.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         
-        <div class="row cells2">
+        <div style="margin-left: 20px;" class="row cells2">
          
           <div class="cell">
               <div class="window error" style="width: 400px;">
