--- a/src/app/subdivision/worksheet/attach-page/attach-page.component.html
+++ b/src/app/subdivision/worksheet/attach-page/attach-page.component.html
@@ -1,6 +1,6 @@
 
 <div class="grid condensed demo-grid" [ngClass]="{'attach': noAttachs}">
-  <h2 *ngIf="noAttachs" style="margin: 0 auto;vertical-align: middle; color: rgb(179, 171, 171);">Drag a File</h2>
+  <h2 *ngIf="noAttachs" style="margin: 0 auto;vertical-align: middle; color: rgb(179, 171, 171);">Drop files here</h2>
   <div *ngFor="let pics of groupPics" style="margin-top:30px;" class="row cells3">
       <div *ngFor="let pic of pics" class="cell">
 
