--- a/src/app/subdivision/worksheet/main-page/main-page.component.html
+++ b/src/app/subdivision/worksheet/main-page/main-page.component.html
@@ -1,25 +1,25 @@
 
     <label >SUBDIVISION NAME</label>
     <div class="input-control text full-size">
-      <input type="text">
+      <input [(ngModel)]="workSheet.attributes.sub_name" type="text">
     </div>
     <label >TAX ACCOUNT #</label>
     <div class="input-control text full-size">
-      <input type="text">
+      <input [(ngModel)]="workSheet.attributes.tax_account" type="text">
     </div>
     <label >9-1-1 COMMUNITY</label>
     <div class="input-control text full-size">
-      <input type="text">
+      <input [(ngModel)]="workSheet.attributes.community" type="text">
     </div>
     <label >ESN</label>
     <div class="input-control text full-size">
-      <input type="text">
+      <input [(ngModel)]="workSheet.attributes.esn"  type="text">
     </div>
     <label >X</label>
     <div class="input-control text full-size">
-      <input type="text">
+      <input [(ngModel)]="workSheet.attributes.geojson" type="text">
     </div>
     <label >Y</label>
     <div class="input-control text full-size">
-      <input type="text">
+      <input [(ngModel)]="workSheet.attributes.geojson" type="text">
     </div>
