--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -378,11 +378,11 @@
                           
                           <div *ngIf="_toolSettings.SECTIONS.SETTINGS.TOOLBAR.onoff" class="tab-panel-group">
                               <div class="tab-group-content">
-                                   <button [routerLink]="['Settings/insertToolbarSettings']" class="fluent-big-button">
+                                   <button [routerLink]="['Settings/createToolbar']" class="fluent-big-button">
                                           <img src="assets/gear_settings.png" alt="New User">
                                           <span class="label">Insert</span>
                                    </button>
-                                   <button [routerLink]="['Settings/updateToolbarSettingsList']" class="fluent-big-button">
+                                   <button [routerLink]="['Settings/updateToolbars']" class="fluent-big-button">
                                           <img src="assets/gear_settings.png" alt="Edit User">
                                           <span class="label">Update</span>
                                     </button>
