--- a/src/app/settings/toolbar-i/toolbar-i.component.html
+++ b/src/app/settings/toolbar-i/toolbar-i.component.html
@@ -5,7 +5,7 @@
           <i class="fa fa-windows" aria-hidden="true"></i>
        </span>
        <span class="window-caption-title">{{title}}</span>
-       <div class="pull-right">
+       <div *ngIf="btnOnOff" class="pull-right">
            <button (click)="onClose()" class="button cycle-button"><i class="fa fa-times-circle"></i></button>
        </div>
      </div>
